--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ starlette = "^0.36"
 pydantic = "^2.6.4"
 uvicorn = "^0.29"
 gunicorn = "^21.2.0"
+sqlmodel = "^0.0.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
