--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: postgres:11.1
     ports:
       - 5432
+    environment:
+      - POSTGRES_PASSWORD=local_pass
 
   test_app:
     container_name: test_app
@@ -17,3 +19,5 @@ services:
       - 80:80
     volumes:
       - "./:/app"
+    environment:
+      - POSTGRES_PASSWORD=local_pass
