--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = "^2.6.4"
 uvicorn = "^0.29"
 gunicorn = "^21.2.0"
 sqlmodel = "^0.0.16"
+postgres = "^4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
